# ConnectivityMetricsTutorials

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/: copilot-instructions.md
01_foundations/: A01_signals_and_sampling.ipynb
notebooks/01_foundations/A_signal_fundamentals/: A01_signals_and_sampling.ipynb  A01_signals_and_sampling_quick.ipynb  A02_frequency_domain.ipynb  A02_frequency_domain_quick.ipynb  A03_power_spectrum_frequency_bands.ipynb  A03_power_spectrum_frequency_bands_quick.ipynb  A04_filtering_signals.ipynb  A04a_filter_fundamentals.ipynb  A04a_filter_fundamentals_quick.ipynb  A04b_applied_filtering.ipynb  A04b_applied_filtering_quick.ipynb
notebooks/01_foundations/B_phase_and_amplitude/: B01_hilbert_transform.ipynb  B01_hilbert_transform_quick.ipynb  B02_working_with_phase.ipynb  B02a_circular_statistics.ipynb  B02a_circular_statistics_quick.ipynb  B02b_phase_relationships.ipynb  B02b_phase_relationships_quick.ipynb  B03_amplitude_envelope.ipynb  B04_wavelets_time_frequency.ipynb
notebooks/01_foundations/C_connectivity_concepts/: C01_volume_conduction.ipynb  C02_connectivity_matrices.ipynb  C03_statistical_significance.ipynb
notebooks/01_foundations/D_information_theory/: D01_entropy_information.ipynb  D02_mutual_information.ipynb  (+1 more)
scripts/: generate_quick_versions.py
src/: __init__.py  coherence.py  colors.py  connectivity.py  constants.py  envelope.py  filtering.py  graph.py  hilbert.py  hyperscanning.py  information.py  phase.py  plotting.py  signals.py  spectral.py  statistics.py  volume_conduction.py  wavelets.py
(+9 files in other folders)
